# Taipei-Day-Trip

./: README.md  app.py  pyproject.toml
auth/: auth.py  validation.py
data/: data-process.py  data_query.py  database.py  taipei-attractions.json
model/: attraction.py  booking.py  model.py  mrt.py  order.py  user.py
routes/: attraction.py  booking.py  mrt.py  order.py  user.py
schema/: attraction.py  booking.py  error_success.py  mrt.py  order.py  user.py
service/: payment.py
static/: attraction.html  booking.html  index.html  thankyou.html
static/css/: attraction.css  booking.css  style.css  thankyou.css  utility.css
static/image/index-icon/: icon處理.ai
static/image/thank-you/: photo-1470004914212-05527e49370b.avif
static/js/: attraction.js  booking.js  index.js  navBar.js  signup_login.js  thankyou.js
static/js/api/: attractionRequest.js  bookingRequest.js  fetchData.js  orderRequest.js  signup_loginRequest.js
static/js/auth/: userStatus.js  validate.js
static/js/component/: fetchData.js  popupModal.js  skeletonLoading.js  userStatus.js
static/js/config/: topPay_config.js
static/js/data/: handleBannerUrl.js
static/js/view/: bookingPreview.js  buttonLoading.js  fieldStatus.js  imageSlider.js  popupModal.js  showMessage.js  spinnerLoading.js
utility/: auth.py  cloudinary.py  cloudinary_image.py  data-process.py  database.py
